--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "my-app",
+  "name": "nextjs-course",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "next": "^12.3.4",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0"
   }
 }
